tests/ui/missing/missing-items/missing-type-parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:4:5
   |
LL |     foo();
   |     ^^^ cannot infer type of the type parameter `X` declared on the function `foo`
   |
note: type must be known for type parameter in this
  --> $DIR/missing-type-parameter.rs:1:1
   |
LL | fn foo<X>() { }
   | ^^^^^^^^^^^
help: consider specifying the generic argument
   |
LL |     foo::<X>();
   |        +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
