tests/ui/missing/missing-items/missing-type-parameter.rs
fn foo<X>() { }

fn main() {
    foo(); //~ ERROR type annotations needed
}
